--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 330 A - 6294940.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 330 A - 6294940.md
@@ -1,8 +1,9 @@
 # Article 330 A
 
-Les constructions nouvelles ainsi que les changements de consistance ou d'affectation des propriétés bâties ou non bâties
-survenus après le début des travaux d'évaluation sont déclarés à l'administration dans les conditions fixées par l'article
-1406 du code général des impôts. 
+Les constructions nouvelles, les changements de consistance ou d'affectation des propriétés bâties ou non bâties ainsi que
+les changements d'utilisation des propriétés bâties mentionnées au I de l'article 1498 du code général des impôts survenus
+après le début des travaux d'évaluation sont déclarés à l'administration dans les conditions fixées par l'article 1406 du
+même code. 
 
 Les propriétaires peuvent demander l'aide des agents de l'administration pour la souscription des formules de déclaration.
 
@@ -14,12 +15,13 @@ _Anciens textes_:
 
 _Codifié par_:
 
-  - Décret n°87-940 1987-11-23
+  - Décret n°87-940 du 23 novembre 1987
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°87-940 1987-11-23 art. 3 JORF 26 novembre 1987
+  - Décret n°2018-535 du 28 juin 2018 - art. 1
 
 _Cite_:
 
   - Code général des impôts, CGI. - art. 1406 (V)
+  - Code général des impôts, CGI. - art. 1498
