--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 333 A - 6294946.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 333 A - 6294946.md
@@ -1,13 +1,13 @@
 # Article 333 A
 
-Sous réserve des articles 333 B à 333 H, la valeur locative des propriétés bâties est déterminée à la date du 1er janvier
-1975 en application : 
+Sous réserve des articles 333 B à 333 H, la valeur locative des propriétés bâties autres que celles mentionnées au I de
+l'article 1498 du code général des impôts est déterminée à la date du 1er janvier 1975 en application : 
 
-Des articles 1494 à 1508 inclus du code général des impôts ; 
+1° Des articles 1494 à 1497,1499 à 1503,1505 à 1508 du code général des impôts ; 
 
-Des articles 310 J bis, 310 K et 310 L ; 
+2° Des articles 310 J bis, 310 K et 310 L ; 
 
-Des articles 324 A à 324 AJ inclus de l'annexe III au code général des impôts.
+3° Des articles 324 A à 324 X et 324 AE à 324 AJ de l'annexe III au même code.
 
 **Liens relatifs à cet article**
 
@@ -17,11 +17,11 @@ _Anciens textes_:
 
 _Codifié par_:
 
-  - Décret n°87-940 1987-11-23
+  - Décret n°87-940 du 23 novembre 1987
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°87-940 1987-11-23 art. 3 JORF 26 novembre 1987
+  - Décret n°2018-535 du 28 juin 2018 - art. 1
 
 _Cite_:
 
@@ -30,7 +30,11 @@ _Cite_:
   - Code général des impôts, annexe 2, CGIAN2. - art. 310 L (V)
   - Code général des impôts, annexe 2, CGIAN2. - art. 333 B (V)
   - Code général des impôts, annexe 3, CGIAN3. - art. 324 A (V)
+  - Code général des impôts, annexe 3, CGIAN3. - art. 324 AE (V)
   - Code général des impôts, CGI. - art. 1494 (V)
+  - Code général des impôts, CGI. - art. 1498
+  - Code général des impôts, CGI. - art. 1499 (V)
+  - Code général des impôts, CGI. - art. 1505 (V)
 
 _Cité par_:
 
