--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 333 - 6294944.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 333 - 6294944.md
@@ -4,8 +4,9 @@ La valeur locative des propriétés bâties et non bâties qui sont situées dan
 de la Martinique, de Mayotte et de la Réunion est déterminée conformément aux règles applicables dans les autres départements
 sous réserve des adaptations fixées par les articles 333 A à 333 J.
 
-Pour le Département de Mayotte, par dérogation aux articles 333 A à 333 J, la valeur locative est déterminée à la date du 1er
-janvier 2012.
+Pour le Département de Mayotte, par dérogation aux articles 333 A à 333 J, la valeur locative des propriétés non bâties et
+des propriétés bâties autres que celles mentionnées au I de l'article 1498 du code général des impôts est déterminée à la
+date du 1er janvier 2012.
 
 **Liens relatifs à cet article**
 
@@ -19,7 +20,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2013-1182 du 18 décembre 2013 - art. 1
+  - Décret n°2018-535 du 28 juin 2018 - art. 1
 
 _Cite_:
 
