--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 242-0 R - 6294454.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 242-0 R - 6294454.md
@@ -1,8 +1,12 @@
 # Article 242-0 R
 
 I. – Pour bénéficier du remboursement de la taxe sur la valeur ajoutée, l'assujetti non établi en France doit adresser au
-service des impôts une demande de remboursement souscrite par voie électronique au moyen du portail mis à sa disposition par
-l'Etat de l'Union européenne où il est établi.
+service des impôts une demande de remboursement. Cette demande est introduite par voie électronique au moyen du portail mis à
+sa disposition par l'Etat de l'Union européenne où l'assujetti est établi. La demande de remboursement est introduite au plus
+tard le 30 septembre de l'année civile qui suit la période à laquelle elle s'applique. 
+
+La demande n'est réputée introduite qu'à la condition que le requérant ait fourni toutes les informations prévues au second
+alinéa de l'article 242-0 T. 
 
 II. – L'assujetti mentionné au I doit joindre par voie électronique à la demande de remboursement une copie de la facture ou
 du document d'importation lorsque la base d'imposition figurant sur la facture ou le document d'importation est égale ou
@@ -13,4 +17,8 @@ supérieure à un montant de 1 000 €. Toutefois, lorsque la facture porte sur 
 
 _Modifié par_:
 
-  - Décret n°2010-413 du 27 avril 2010 - art. 1
+  - Décret n°2018-865 du 8 octobre 2018 - art. 1
+
+_Cite_:
+
+  - Code général des impôts, annexe 2, CGIAN2. - art. 242-0 T
