--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 294 bis - 6294764.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 294 bis - 6294764.md
@@ -1,100 +1,126 @@
 # Article 294 bis
 
-I. – Les héritiers, donataires ou légataires d'actions ou de parts de sociétés mentionnées à l'article 787 B du code général
-des impôts, qui demandent à bénéficier des dispositions de cet article, doivent remettre au service des impôts compétent pour
-enregistrer la déclaration de succession, de don manuel ou l'acte de donation, dans les délais prévus pour cet
-enregistrement, les documents suivants :
+I. – Les héritiers, donataires ou légataires d'actions ou de parts de sociétés mentionnées au premier alinéa de l'article 787
+B du code général des impôts, qui demandent à bénéficier des dispositions de cet article, doivent remettre au service des
+impôts compétent pour enregistrer la déclaration de succession, de don manuel ou l'acte de donation, dans les délais prévus
+pour cet enregistrement, les documents suivants : 
 
-1° Une copie de l'acte enregistré constatant l'engagement collectif de conservation en cours, mentionné au premier alinéa du
-a de l'article 787 B précité, signé par le défunt ou le donateur avec un ou plusieurs autres associés et comportant les
-éléments suivants :
+1° Une copie de l'acte enregistré constatant l'engagement de conservation pris en application du premier alinéa du a de cet
+article, en cours au jour de la transmission à titre gratuit, signé par le défunt ou le donateur pour lui et ses ayants cause
+à titre gratuit, seul ou avec un ou plusieurs autres associés et comportant les éléments suivants : 
 
-a) L'identité du ou des associés ayant souscrit avec le défunt ou le donateur l'engagement collectif de conservation ;
+a) L'identité du ou des associés ayant souscrit cet engagement, le nombre de titres détenus par chaque associé au jour de
+l'enregistrement de l'acte et soumis à cet engagement, ainsi que leur nombre total et les pourcentages y afférents des droits
+mentionnés au 1 du b de l'article 787 B du code général des impôts ; 
 
-b) Le nombre de titres que les personnes mentionnées au premier alinéa du a ont soumis ensemble à l'engagement collectif de
-conservation ainsi que le pourcentage y afférents des droits mentionnés au b de l'article 787 B ;
+b) L'identité de la personne ayant souscrit l'engagement qui satisfait à la condition prévue au d du même article. 
 
-c) Le nombre de titres détenus par chaque associé, au jour de l'enregistrement de l'acte, et soumis à l'engagement collectif
-de conservation ;
+2° Une attestation de la société dont les parts ou actions font l'objet de l'engagement de conservation certifiant que : 
 
-d) L'identité de la personne ayant souscrit l'engagement prévu au premier alinéa du a de l'article 787 B qui satisfait à la
-condition prévue au d du même article ;
-
-2° Une attestation de la société dont les parts ou actions font l'objet de l'engagement collectif de conservation certifiant
-que :
-
-a) L'engagement collectif de conservation souscrit par le défunt ou le donateur, pour lui et ses ayants cause à titre
-gratuit, avec un ou plusieurs autres associés, d'une durée d'au moins deux ans, est en cours au jour de la transmission à
-titre gratuit ;
+a) L'engagement de conservation souscrit par le défunt ou le donateur, pour lui et ses ayants cause à titre gratuit, seul ou
+avec un ou plusieurs autres associés, d'une durée minimale de deux ans, est en cours au jour de la transmission à titre
+gratuit ; 
 
 b) Cet engagement a été respecté pour le pourcentage et le nombre de titres prévus au b du 1° lors de sa souscription
-jusqu'au jour de la transmission à titre gratuit ;
+jusqu'au jour de la transmission à titre gratuit ; En cas d'interposition d'une ou plusieurs sociétés entre un associé partie
+à l'engagement autre que le bénéficiaire mentionné au premier alinéa du présent I et la société dont les parts ou actions
+font l'objet de cet engagement, cette dernière fournit les attestations mentionnées au 1° du IV du présent article,
+transmises par la ou les sociétés interposées ; 
 
 c) Ses statuts limitent les droits de l'usufruitier dans les conditions prévues par l'avant-dernier alinéa de l'article 787 B
-précité en cas de donation de titres consentie avec réserve d'usufruit.
+précité en cas de donation de titres consentie avec réserve d'usufruit. 
 
-3° Dans le cas où le régime, prévu par l'article 787 B, concerne les titres d'une société interposée entre le redevable et la
-société signataire de l'engagement collectif de conservation, une attestation de la société interposée précisant le nombre de
-titres qu'elle détient dans la société signataire de l'engagement collectif de conservation à la date de la signature de
-celui-ci et certifiant que, depuis cette date, cette participation est demeurée inchangée.
+II. – Lorsque l'engagement de conservation est conclu dans les conditions mentionnées au deuxième alinéa du a de l'article
+787 B du code général des impôts, les héritiers ou légataires qui demandent à bénéficier de l'exonération doivent remettre au
+service des impôts compétent pour enregistrer la déclaration de succession, dans les délais prévus pour cet enregistrement,
+les documents suivants : 
 
-II. – Lorsque l'engagement collectif de conservation est conclu dans les conditions mentionnées au deuxième alinéa du a de
-l'article 787 B, les héritiers ou légataires qui demandent à bénéficier de l'exonération doivent remettre au service des
-impôts compétent pour enregistrer la déclaration de succession, dans les délais prévus pour cet enregistrement, les documents
-suivants :
+1° Une copie de l'acte enregistré constatant l'engagement de conservation, mentionné au deuxième alinéa du a de l'article 787
+B précité, signé par le ou les héritiers ou légataires entre eux ou avec un ou plusieurs autres associés et comportant les
+éléments suivants : 
 
-1° Une copie de l'acte enregistré constatant l'engagement collectif de conservation, mentionné au deuxième alinéa du a de
-l'article 787 B, signé par le ou les héritiers ou légataires entre eux ou avec un ou plusieurs autres associés et comportant
-les éléments suivants :
+a) L'identité du ou des associés ayant souscrit cet engagement, le nombre de titres détenus par chacun d'entre eux au jour de
+l'enregistrement de l'acte et soumis à cet engagement, ainsi que leur nombre total et les pourcentages y afférents des droits
+mentionnés au 1 du b de l'article 787 B précité ; 
 
-a) L'identité du ou des associés ayant souscrit avec le ou les héritiers ou légataires l'engagement collectif de
-conservation ;
+b) (supprimé) 
 
-b) Le nombre de titres que les personnes mentionnées au deuxième alinéa du a de l'article 787 B ont soumis ensemble à
-l'engagement collectif de conservation, ainsi que le pourcentage y afférent des droits mentionnés au b du même article ;
+c) (supprimé) 
 
-c) Le nombre de titres détenus par chaque personne mentionnée au deuxième alinéa du a de l'article 787 B, au jour de
-l'enregistrement de l'acte, et soumis à l'engagement collectif de conservation ;
+d) L'identité de la personne ayant souscrit l'engagement prévu au deuxième alinéa du a de l'article 787 B précité qui
+satisfait à la condition prévue au b du même article ; 
 
-d) L'identité de la personne ayant souscrit l'engagement prévu au deuxième alinéa du a de l'article 787 B qui satisfait à la
-condition prévue au d du même article ;
+2° Une attestation de la société dont les parts ou actions font l'objet de l'engagement de conservation certifiant qu'il a
+été souscrit par le ou les héritiers ou légataires, pour eux et leurs ayants cause à titre gratuit, entre eux ou avec un ou
+plusieurs autres associés pour une durée d'au moins deux ans. En cas d'interposition d'une ou plusieurs sociétés entre un
+associé partie à l'engagement autre que le bénéficiaire mentionné au premier alinéa du présent II et la société dont les
+parts ou actions font l'objet de cet engagement, cette dernière fournit les attestations mentionnées au 1° du IV du présent
+article, transmises par la ou les sociétés interposées ; 
 
-2° Une attestation de la société dont les parts ou actions font l'objet de l'engagement collectif de conservation certifiant
-qu'il a été souscrit par le ou les héritiers ou légataires, pour lui et ses ayants cause à titre gratuit, entre eux ou avec
-un ou plusieurs autres associés pour une durée d'au moins deux ans ;
+III. – Lorsque l'engagement de conservation mentionné au premier alinéa du a de l'article 787 B du code général des impôts
+est réputé acquis au sens des dispositions du 2 du b du même article, les héritiers, donataires ou légataires d'actions ou de
+parts de sociétés qui demandent à bénéficier du régime prévu par cet article doivent remettre au service des impôts compétent
+pour enregistrer la déclaration de succession, de don manuel ou l'acte de donation, dans les délais prévus pour cet
+enregistrement, une attestation de la société dont les parts ou actions font l'objet de l'engagement de conservation réputé
+acquis certifiant que : 
 
-3° Dans le cas où le régime prévu par l'article 787 B précité concerne les titres d'une société interposée entre la personne
-et la société signataire de l'engagement collectif de conservation, une attestation de la société interposée précisant le
-nombre de titres qu'elle détient dans la société signataire de l'engagement collectif de conservation à la date de la
-signature de celui-ci et certifiant que, depuis cette date, cette participation est demeurée inchangée.
+1° Le pourcentage des parts ou actions détenues depuis deux ans au moins par le défunt ou le donateur, seul ou avec son
+conjoint, son concubin notoire ou le partenaire avec lequel il est lié par un pacte civil de solidarité atteignait, au moment
+de la transmission à titre gratuit, les seuils prévus au premier alinéa du 1 du b de l'article 787 B précité ; 
 
-III. – Lorsque l'engagement collectif est réputé acquis au sens des dispositions du septième alinéa de l'article 787 B
-précité, les héritiers, donataires ou légataires d'actions ou de parts de sociétés qui demandent à bénéficier du régime prévu
-par cet article doivent remettre au service des impôts compétent pour enregistrer la déclaration de succession, de don manuel
-ou l'acte de donation, dans les délais prévus pour cet enregistrement, une attestation de la société dont les parts ou
-actions sont transmises certifiant que :
-
-1° Le pourcentage des parts ou actions détenues par le défunt ou le donateur, seul ou avec son conjoint ou le partenaire avec
-lequel il est lié par un pacte civil de solidarité atteignait, au moment de la transmission à titre gratuit, les seuils
-prévus au premier alinéa du 1 du b de l'article 787 B précité ;
-
-2° Le défunt, ou le donateur, ou son conjoint, ou le partenaire avec lequel il est lié par un pacte civil de solidarité,
-exerçait, au moment de la transmission à titre gratuit depuis deux ans au moins dans la société dont les titres sont
-transmis, son activité professionnelle principale ou l'une des fonctions énumérées au 1° du 1 du III de l'article 975 du code
-général des impôts lorsque la société est soumise à l'impôt sur les sociétés ;
+2° Le défunt, le donateur, ou son conjoint, son concubin notoire ou le partenaire avec lequel il est lié par un pacte civil
+de solidarité, exerçait, au moment de la transmission à titre gratuit depuis deux ans au moins dans cette société, son
+activité professionnelle principale ou l'une des fonctions énumérées au 1° du 1 du III de l'article 975 du code général des
+impôts lorsque la société est soumise à l'impôt sur les sociétés ; 
 
 3° Ses statuts limitent les droits de l'usufruitier dans les conditions prévues par l'avant-dernier alinéa de l'article 787 B
-précité en cas de donation de titres consentie avec réserve d'usufruit.
+précité en cas de donation de titres consentie avec réserve d'usufruit. 
 
-**Nota:**
+IV.-Pour l'application des I à III, dans le cas où la transmission à titre gratuit porte sur des titres d'une société
+interposée entre le bénéficiaire de l'exonération, d'une part, et la société dont les parts ou actions font l'objet de
+l'engagement mentionné au a de l'article 787 B du code général des impôts ou une société détenant directement une
+participation dans celle-ci, d'autre part, les héritiers, donataires ou légataires joignent, en lieu et place des documents
+mentionnés aux 2° des I et II et au III, sous les mêmes conditions, les documents suivants : 
 
-Modification effectuée en conséquence de la loi n° 2017-1837 du 30 décembre 2017 (art. 31-I A, B 34° et IX B 1).
+1° Une attestation de chaque société composant la chaîne de participation entre le bénéficiaire de l'exonération et la
+société dont les parts ou actions font l'objet de l'engagement certifiant : 
+
+a) L'identité de celui ou ceux de ses associés soumis aux obligations de conservation prévues au a et au dernier alinéa du 3
+du b de l'article 787 B précité et le nombre de parts ou actions soumises à ces obligations, ainsi que les pourcentages de
+son capital et de ses droits de vote afférents, détenues par chacun d'eux de manière continue depuis la souscription de
+l'engagement de conservation ou, le cas échéant, durant les deux ans précédant la date de la transmission opérée dans les
+conditions prévues au 2 du b de l'article 787 B précité ; 
+
+b) Le nombre de parts ou actions qu'elle détient de manière continue depuis la souscription de l'engagement de conservation
+ou, le cas échéant, durant les deux ans précédant la date de la transmission opérée dans les conditions prévues au 2 du b de
+l'article 787 B précité, dans la société dont les parts ou actions font l'objet de l'engagement de conservation prévu au a de
+l'article 787 B précité ou dans une société possédant directement une participation dans la société dont les parts ou actions
+font l'objet de cet engagement ; 
+
+c) Le cas échéant, la limitation, par ses statuts, des droits de l'usufruitier dans les conditions prévues par l'avant-
+dernier alinéa de l'article 787 B précité en cas de donation de titres consentie avec réserve d'usufruit ; 
+
+2° Une attestation de la société dont les parts ou actions font l'objet de l'engagement mentionné au a de l'article 787 B
+précité certifiant : 
+
+a) Le nombre de parts ou actions soumises aux obligations de conservation prévues au a et au dernier alinéa du 3 du b de
+l'article 787 B précité, ainsi que les pourcentages de son capital et de ses droits de vote afférents, détenues de manière
+continue par celui ou ceux de ses associés soumis à ces obligations depuis la souscription de l'engagement de conservation
+ou, le cas échéant, durant les deux ans précédant la date de transmission opérée dans les conditions du 2 du b de l'article
+787 B précité. 
+
+En cas d'interposition d'une ou plusieurs sociétés entre un associé partie à l'engagement autre que le bénéficiaire mentionné
+au premier alinéa du présent IV et la société dont les parts ou actions font l'objet de cet engagement, cette dernière
+fournit la ou les attestations mentionnées au 1° du présent IV transmises par la ou les sociétés interposées ; 
+
+b) Le cas échéant, la limitation, par ses statuts, des droits de l'usufruitier dans les conditions prévues par l'avant-
+dernier alinéa de l'article 787 B précité en cas de donation de titres consentie avec réserve d'usufruit.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2019-559 du 6 juin 2019 - art. 2
+  - Décret n°2019-653 du 27 juin 2019 - art. 1
 
 _Cité par_:
 
@@ -103,4 +129,4 @@ _Cité par_:
 _Cite_:
 
   - Code général des impôts, CGI. - art. 787 B
-  - Code général des impôts, CGI. - art. 885 O bis
+  - Code général des impôts, CGI. - art. 975
